Fix overlapping fields in timesheet edit form (#8)

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -496,3 +496,33 @@ nav li a svg {
         justify-content: flex-start;
     }
 }
+
+
+.timesheet-form {
+    grid-template-areas: none;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.timesheet-form .form-group-edit,
+.timesheet-form .form-actions-edit {
+    grid-area: auto;
+}
+
+.timesheet-span-2 {
+    grid-column: 1 / -1;
+}
+
+.timesheet-form .form-actions-edit {
+    grid-column: 1 / -1;
+}
+
+@media (max-width: 900px) {
+    .timesheet-form {
+        grid-template-columns: 1fr;
+    }
+
+    .timesheet-span-2,
+    .timesheet-form .form-actions-edit {
+        grid-column: auto;
+    }
+}
